[MAHOUT-1956] Update README.md to include build instructions and an example for GPU/GPU/JVM